--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+
+<div><h1> RESTAURANT </h1></div>
+
+
+
+<div id="new_restaurant"><%= link_to "New Restaurant", new_restaurant_path %></div>
+
+
+<div><ul>
+	<li>name: Fusia Dog </li>
+	<li>Price_range: $9.00 </li>
+	<li>Adress: 10 Duncan st.</li>
+	<li><a href="http://www.fusiadog.com/menu">Mmmmmenu!</a> </li><ul></div>
+
+<div>
+	<ul>
+		<li><%= @restaurants.each do |restaurant| %></li>
+		<li><%= restaurant.name %></li>
+		<li><%= restaurant.address %></li>
+		<li><%= restaurant.menu_url %></li>
+		<li><%= restaurant.price_range %></li>
+		<% end %>
+	</ul>
+</div>
+	<div><p> BE SEATED</p></div>
