--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Restaurants#new</h1>
-<p>Find me in app/views/restaurants/new.html.erb</p>
+<div class="top"><h1>New Restaurant</h1></div>
+
+<%= render 'form' %>
+
+<div class="footer"><%= link_to "Back", restaurants_path %></div>
