--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,7 +1,7 @@
-<div id="form_box"><%= form_for :restaurant do |f| %>
+<div id="form_box"><%= form_for @restaurant do |f| %>
 
 	<div class="field">
-		<%= f.label :name %><br />
+		<%= f.label :name %></br>
 		<%= f.text_field :name %>
 	</div>
 	<div class="field">
