--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -18,4 +18,8 @@
 	<%= @restaurant.menu_url %>
 </div>
 
-<div class="footer"><%= link_to "Back", restaurants_path %></div>
+<div class="footer">
+	<div class="foot_link"><%= link_to "Back", restaurants_path %></div>
+	<div class="foot_link"><%= link_to "Edit", edit_restaurant_path %></div>
+	<!-- <div class="foot_link"><%= link_to "Delete", restaurant %></div> -->
+</div>
