--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div class="top"><h1>Register</h1></div>
 
 <%= form_for @user do |f| %>
-	<% if @user.errors.any? %>
-	<div class="error_messaged">
+	<% if @user.errors.any? %> 
+	<div class="error_messages">
 		<h2>Sorry, there are errors on this form!</h2>
 		<ul>
 			<% for message in @user.errors.full_messages %>
@@ -19,7 +19,7 @@
 	<%= f.label :password %></br>
 	<%= f.password_field :password %>
 </div>
-<div>
+<div class="field">
 	<%= f.label :password_confirmation %><br/>
 	<%= f.password_field :password_confirmation %>
 </div>
