--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -24,3 +24,7 @@
 	<div class="foot_link"><%= link_to "Delete", @restaurant,
 	 method: :delete, data: { confirm: "Are you sure?" } %></div>
 </div>
+
+<div>
+<%= link_to "New Reservation", new_reservation_path %>
+</div>
