--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -2,7 +2,8 @@
 
 <%= form_for ([@restaurant, @reservation]) do |f| %>
 	<%= f.label :res_time %>
-	<%= f.select :res_time, @restaurant.timeslots.collect { |slot| [slot.strftime("%A, %b %d, %l:%M %p"), slot]} %>
+	<%= f.datetime_select :res_time %>
+	<%#= f.select :res_time, @restaurant.timeslots.collect { |slot| [slot.strftime("%A, %b %d, %l:%M %p"), slot]} %>
 
 	<%= f.submit %>
 	<% end %> 
