--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -26,5 +26,5 @@
 </div>
 
 <div>
-<%= link_to "New Reservation", new_reservation_path %>
+<%= link_to "New Reservation", new_restaurant_reservation_path(restaurant_id: @restaurant.id) %>
 </div>
