temp. reservation page, without USER or Reservation info

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Reservations#index</h1>
+<h1>Reservation Confirmation </h1>
+<div>	
+<h2><%= "Your reservation is confirmed!" %></h2>
+</div>
+<div>
+<h5><%= "Please note, should you miss your reservation, you will be charged a fee of $130.00, no exceptions!" %> </h5>
+
+
+</div>
 <p>Find me in app/views/reservations/index.html.erb</p>
