--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Reservations#show</h1>
+<h1> MY UPCOMMING RESERVATIONS </h1>
 <p>Find me in app/views/reservations/show.html.erb</p>
+
+
+
+
+
+
+	
+
